dataset1235/2025-2/610742602/users/2705833823/executions/677928262_1462915504.log
== SUBMISSION (2025-08-28 20:10:34)
-- CODE: 
lado = float(input("Insira o comprimento do lado do pentagono"))

import math
apotema = lado/ (2 * math.tan(math.pi/5))
area = 5/2 * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Insira o comprimento do lado do pentagono139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Insira o comprimento do lado do pentagono61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Insira o comprimento do lado do pentagono208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Insira o comprimento do lado do pentagono110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Insira o comprimento do lado do pentagono27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Insira o comprimento do lado do pentagono172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:10:20)
-- CODE: 
lado = float(input("Insira o comprimento do lado do pentagono"))

import math
apotema = lado/ (2 * math.tan(math.pi/5))
area = 5/2 * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Insira o comprimento do lado do pentagono139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Insira o comprimento do lado do pentagono61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Insira o comprimento do lado do pentagono208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Insira o comprimento do lado do pentagono110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Insira o comprimento do lado do pentagono27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Insira o comprimento do lado do pentagono172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:09:30)
-- CODE: 
lado = float(input("Insira o comprimento do lado do pentagono"))

import math
apotema = lado/2 * math.tan(math.pi/5)
area = 5/2 * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Insira o comprimento do lado do pentagono73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Insira o comprimento do lado do pentagono32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Insira o comprimento do lado do pentagono109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Insira o comprimento do lado do pentagono58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Insira o comprimento do lado do pentagono14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Insira o comprimento do lado do pentagono90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:09:23)
-- CODE: 
lado = float(input("Insira o comprimento do lado do pentagono"))

import math
apotema = lado/2 * math.tan(math.pi/5)
area = 5/2 * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Insira o comprimento do lado do pentagono73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Insira o comprimento do lado do pentagono32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Insira o comprimento do lado do pentagono109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Insira o comprimento do lado do pentagono58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Insira o comprimento do lado do pentagono14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Insira o comprimento do lado do pentagono90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:46:48)
-- CODE: 
lado = float(input("Insira o comprimento do lado do pentagono"))

import math
apotema = lado/2*tan(math.pi/5)
area = 5/2 * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:46:47)
-- CODE: 
lado = float(input("Insira o comprimento do lado do pentagono"))

import math
apotema = lado/2*tan(math.pi/5)
area = 5/2 * lado * apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2*tan(math.pi/5)
                     ^^^
NameError: name 'tan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
